[ASAN] memory leak in get_numbered_property_as_sorted_string function

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 24
    • Component/s: hotspot
    • 24
    • b02
    • generic
    • generic

      ==1088243==ERROR: LeakSanitizer: detected memory leaks

      Direct leak of 19 byte(s) in 1 object(s) allocated from:
          #0 0x7f0d430f6f77 in malloc ../../.././libsanitizer/asan/asan_malloc_linux.cpp:69
          #1 0x7f0d2d995a17 in os::malloc(unsigned long, MemTag, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:657
          #2 0x7f0d2d99c0cf in os::malloc(unsigned long, MemTag) src/hotspot/share/runtime/os.cpp:625
          #3 0x7f0d2d99c0cf in os::strdup(char const*, MemTag) src/hotspot/share/runtime/os.cpp:597
          #4 0x7f0d2d67c9c9 in Modules::get_numbered_property_as_sorted_string(char const*) src/hotspot/share/classfile/modules.cpp:726
          #5 0x7f0d2d67d52e in Modules::get_native_access_flags_as_sorted_string() src/hotspot/share/classfile/modules.cpp:638
          #6 0x7f0d2d67d52e in Modules::serialize_native_access_flags(SerializeClosure*) src/hotspot/share/classfile/modules.cpp:644
          #7 0x7f0d2d67d52e in Modules::serialize_native_access_flags(SerializeClosure*) src/hotspot/share/classfile/modules.cpp:641
          #8 0x7f0d2d506550 in MetaspaceShared::early_serialize(SerializeClosure*) src/hotspot/share/cds/metaspaceShared.cpp:426
          #9 0x7f0d2d50b05c in MetaspaceShared::map_archive(FileMapInfo*, char*, ReservedSpace) src/hotspot/share/cds/metaspaceShared.cpp:1608
          #10 0x7f0d2d515bbb in MetaspaceShared::map_archives(FileMapInfo*, FileMapInfo*, bool) src/hotspot/share/cds/metaspaceShared.cpp:1271
          #11 0x7f0d2d518460 in MetaspaceShared::initialize_runtime_shared_and_meta_spaces() src/hotspot/share/cds/metaspaceShared.cpp:1098
          #12 0x7f0d2d4e29dd in Metaspace::global_initialize() src/hotspot/share/memory/metaspace.cpp:736
          #13 0x7f0d2efae709 in universe_init() src/hotspot/share/memory/universe.cpp:887
          #14 0x7f0d2bdd93d2 in init_globals() src/hotspot/share/runtime/init.cpp:133
          #15 0x7f0d2eed484c in Threads::create_vm(JavaVMInitArgs*, bool*) src/hotspot/share/runtime/threads.cpp:574
          #16 0x7f0d2c447a7e in JNI_CreateJavaVM_inner src/hotspot/share/prims/jni.cpp:3589
          #17 0x7f0d2c447a7e in JNI_CreateJavaVM src/hotspot/share/prims/jni.cpp:3680
          #18 0x7f0d4371e0f5 in InitializeJVM src/java.base/share/native/libjli/java.c:1495
          #19 0x7f0d4371e0f5 in JavaMain src/java.base/share/native/libjli/java.c:494
          #20 0x7f0d4372dff8 in ThreadJavaMain src/java.base/unix/native/libjli/java_md.c:649

            Assignee:
            Sendao Yan
            Reporter:
            Sendao Yan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: