8345632: [ASAN] memory leak in get_numbered_property_as_sorted_string function